added navigation <nav> in <body> tag with <h3> logo and <ul> for header links

--- a/index.html
+++ b/index.html
@@ -6,4 +6,14 @@
     <link rel="stylesheet" href="./styles.css">
     <title>Odin Landing Page</title>
 </head>
+<body>
+    <nav>
+        <h3>Logo</h3>
+        <ul>
+            <li><a href="#">header link one</a></li>
+            <li><a href="#">header link two</a></li>
+            <li><a href="#">header link three</a></li>
+        </ul>
+    </nav>
+</body>
 </html>
