--- a/index.html
+++ b/index.html
@@ -15,5 +15,15 @@
             <li><a href="#">header link three</a></li>
         </ul>
     </nav>
+    <header>
+        <section>
+            <h1>A Website</h1>
+            <div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit iste earum molestiae voluptatum ipsa atque obcaecati ad nihil sint eligendi! Quisquam nemo architecto minima sed eligendi sunt reprehenderit fugiat suscipit.</p>
+                <button>Sign up</button>
+            </div>
+        </section>
+        <div>This is a placeholder for an image</div>
+    </header>
 </body>
 </html>
