added <main> with <h2>Info</h2> and middle section containing div boxes

--- a/index.html
+++ b/index.html
@@ -25,5 +25,30 @@
         </section>
         <div>This is a placeholder for an image</div>
     </header>
+    <main>
+        <h2 class="info">Info</h2>
+        <section class="middle">
+            <div class="box-office">
+                <div class="in-box">
+                </div>
+                <p class="description">description</p>
+            </div>
+            <div class="box-office">
+                <div class="in-box">
+                </div>
+                <p class="description">description</p>
+            </div>
+            <div class="box-office">
+                <div class="in-box">
+                </div>
+                <p class="description">description</p>
+            </div>
+            <div class="box-office">
+                <div class="in-box">
+                </div>
+                <p class="description">description</p>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
