added <section> for <blockquote> and <cite>

--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
                 <p class="description">description</p>
             </div>
         </section>
+        <section class="quote">
+            <div class="quote-centering">
+                <blockquote>Beauty will save the world.</blockquote>
+                <cite>
+                    Dostoyevsky
+                </cite>
+            </div>
+        </section>
     </main>
 </body>
 </html>
