rearanged <blockquote> and <cite> properly

--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
             </div>
         </section>
         <section class="quote">
-            <div class="quote-centering">
-                <blockquote>Beauty will save the world.</blockquote>
-                <cite>
-                    Dostoyevsky
-                </cite>
-            </div>
+            <blockquote class="quote-centering">
+              <p>Beauty will save the world.</p>
+              <cite>
+                  Dostoyevsky
+              </cite>
+          </blockquote>
         </section>
     </main>
 </body>
