added call to action section with button

--- a/index.html
+++ b/index.html
@@ -57,6 +57,17 @@
               </cite>
           </blockquote>
         </section>
+        <section class="end-sec">
+            <div class="end">
+                <div>
+                    <h3>
+                        Call to action! It's time!
+                    </h3>
+                    <p>sign up for our product by clicking button right over there!</p>
+                </div>
+                <button id="button2">sign up</button>
+            </div>
+        </section>
     </main>
 </body>
 </html>
