added footer with copyright paragraph

--- a/index.html
+++ b/index.html
@@ -69,5 +69,8 @@
             </div>
         </section>
     </main>
+    <footer>
+        <p class="copyright">copyright &copy; 2022 Robert Hypax NDIRAMIYE</p>
+    </footer>
 </body>
 </html>
