added appropriate classes and id to the document

--- a/index.html
+++ b/index.html
@@ -7,23 +7,23 @@
     <title>Odin Landing Page</title>
 </head>
 <body>
-    <nav>
-        <h3>Logo</h3>
-        <ul>
+    <nav class="header-links">
+        <h3 class="logo">Logo</h3>
+        <ul class="links">
             <li><a href="#">header link one</a></li>
             <li><a href="#">header link two</a></li>
             <li><a href="#">header link three</a></li>
         </ul>
     </nav>
     <header>
-        <section>
+        <section class="header-section">
             <h1>A Website</h1>
-            <div>
+            <div class="describe">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit iste earum molestiae voluptatum ipsa atque obcaecati ad nihil sint eligendi! Quisquam nemo architecto minima sed eligendi sunt reprehenderit fugiat suscipit.</p>
-                <button>Sign up</button>
+                <button id="button1">Sign up</button>
             </div>
         </section>
-        <div>This is a placeholder for an image</div>
+        <div class="image">This is a placeholder for an image</div>
     </header>
     <main>
         <h2 class="info">Info</h2>
