removed unnecessary class

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
         </section>
         <section class="quote">
-            <blockquote class="quote-centering">
+            <blockquote>
               <p>Beauty will save the world.</p>
               <cite>
                   Dostoyevsky
