added dashes to content of <cite>

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <blockquote>
               <p>Beauty will save the world.</p>
               <cite>
-                  Dostoyevsky
+                  -- Dostoyevsky
               </cite>
           </blockquote>
         </section>
